--- a/app_festaReady/templates/festa_ready/list_accompany.html
+++ b/app_festaReady/templates/festa_ready/list_accompany.html
@@ -1,45 +1,208 @@
 {% extends 'base.html' %}
 {% block content %}
-<div id="ready_partner_div">
-        <a href="{% url 'create_accompany' festa.id %}" class="btn btn-primary">글쓰기</a>
 
-        <form action="" method="get">
-                <input type="text" name="search" value="{{ search }}">
-                <input type="submit" value="검색">
-        </form>
-
-        <p>----------------------------</p>
-
-
-        {% for accompany in posts %}
-        <p> 제목: {{accompany.title}}</p>
-        <p> 지역: {{accompany.area}}</p>
-        <p> 작성자: {{accompany.writer}}</p>
-        <a href="{% url 'detail_accompany' festa.id accompany.id%}" class="btn btn-primary">보러가기</a>
-        <p>----------------------------</p>
-        {% endfor %}
-
-        <div class="container">
-
-        {% if posts.has_previous %}
-        <a href="?page=1">first</a>
-        <a href="?page={{posts.previous_page_number}}">Previous</a>
-        {% endif %}
-
-        <span>{{posts.number}}</span>
-        <span>of</span>
-        <span>{{posts.paginator.num_pages}}</span>
-
-        {% if posts.has_next %}
-        <a href="?page={{posts.next_page_number}}">Next</a>
-        <a href="?page={{posts.paginator.num_pages}}">Last</a>
-        {% endif %}
-
+<div id="list_accompany_container">
+    <div id="subtitle_text_wrapper">
+        동행구하기
+    </div>
+    <div id="table_bt_div">
+        <div id="bt_write_div">
+            <form action="{% url 'create_accompany' festa.id %}" method="GET">
+                <input id="write_bt_image" type="submit" value="&#xf040" class="7x">
+                <input id="write_bt_text" type="submit" value="글쓰기">
+            </form>
         </div>
+
+        <div id="table_div">
+            <table>
+                <tr>
+                    <td id="table_intro" colspan="5"> 동행 구하기 &nbsp;'집가자'&nbsp; 게시판 입니다.</td>
+                </tr>
+                <tr id="kind_board">
+                    <td>지역</td>
+                    <td>제목</td>
+                    <td>작성자</td>
+                    <td>날짜</td>
+                    <td>시간</td>
+                </tr>
+                <!-- 게시글 등록 -->
+                {% for accompany in posts %}
+                <tr class="notice_board">
+                    <td>{{accompany.area}}</td>
+                    <td class="title_td">
+                        <a href="{% url 's_detail_home' festa.id accompany.id %}"> <span>{{accompany.title}}</span></a>
+                    </td>
+                    <td>{{accompany.writer}}</td>
+                    <td>{{accompany.pub_date|date:"Y/m/d"}}</td>
+                    <td>{{accompany.pub_date|time:"H:i"}}</td>
+                </tr>
+                {% endfor %}
+            </table>
+        </div>
+
+        <div id="pagination">
+            {%if posts.has_previous%}
+            <a href="?page=1">First</a>
+            <a href="?page={{posts.previous_page_number}}">Previous</a>
+            {%endif%}
+
+            <span>{{posts.number}}</span>
+            <span>of</span>
+            <span>{{posts.paginator.num_pages}}</span>
+
+            {%if posts.has_next%}
+            <a href="?page={{posts.next_page_number}}">Next</a>
+            <a href="?page={{posts.paginator.num_pages}}">Last</a>
+            {%endif%}
+        </div>
+    </div>
 </div>
 
 <!-- 자바 스크립트 연결 -->
 {% load static %}
 <script type="text/javascript" src="/static/js/festa_ready_js.js?ver=3' %}"></script>
 
+<style>
+    /* 전체 컨테이너 */
+    #list_accompany_container {
+        width: 100%;
+        height: 100%;
+        padding-top: 50px;
+        padding-left: 3%;
+        padding-right: 20%;
+    }
+
+    /* 공지사항 타이틀 */
+    #subtitle_text_wrapper {
+        font-size: 20px;
+        font-weight: bold;
+    }
+
+    /* content가 들어가 container */
+    #table_bt_div {
+        background: #ffffff;
+        padding-left: 3%;
+        padding-right: 3%;
+        padding-top: 2%;
+        padding-bottom: 5%;
+        margin-top: 20px;
+        width: 100%;
+    }
+
+    /* 버튼 wrapper */
+    #bt_write_div {
+        width: 100%;
+    }
+
+    /* 테이블 wrapper */
+    #table_div {
+        width: 100%;
+    }
+
+    #table_intro {
+        font-size: 1vw;
+        font-weight: bold;
+    }
+
+    /* 카테고리 board, 실제 내용(공지사항) board -> 밑줄 긋는 css */
+
+    #kind_board,
+    .notice_board {
+        width: 100%;
+        font-size: 18px;
+    }
+
+    #kind_board {
+        border-bottom: 1px solid #000000;
+        font-weight: 500;
+    }
+
+    #kind_board td {
+        padding-top: 30px;
+    }
+
+    .notice_board {
+        border-bottom: 1px solid #6357ff;
+        color: #6357ff;
+    }
+
+    /* board 안에 있는 a 태그 */
+    .notice_board td a {
+        color: #6357ff;
+        text-decoration: none;
+    }
+
+    .notice_board td {
+        padding-top: 3px;
+        padding-bottom: 3px;
+    }
+
+    /* #content_board {
+        border-bottom: 1px solid #D5D5D5;
+    }
+
+    #content_board a {
+        color: #000000;
+        text-decoration: none;
+    } */
+
+    /* 테이블 태그 */
+    table {
+        width: 100%;
+    }
+
+    /* table_div 안 모든 td 태그 */
+    td {
+        text-align: center;
+    }
+
+    /* 제목이 들어가는 특정 td */
+    .title_td {
+        width: 40%;
+    }
+
+    .title_td a span {
+        display: block;
+        width: 300px;
+        height: auto;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #bt_write_div form {
+        background: #eaeaea;
+        text-align: center;
+        display: inline-block;
+        padding: 7px 20px;
+    }
+
+    #bt_write_div form input {
+        border: 0px;
+    }
+
+    #write_bt_image {
+        width: auto;
+        padding: 1px;
+        font-family: 'FontAwesome';
+        background: none;
+        border: 0px;
+        padding: 0px;
+    }
+
+    #write_bt_text {
+        border: 0px;
+        background: none;
+        padding: 0px;
+    }
+
+    /* 페이지 네이션 */
+    #pagination {
+        width: 100%;
+        text-align: center;
+    }
+</style>
 {% endblock %}
