--- a/project_festa/templates/base.html
+++ b/project_festa/templates/base.html
@@ -25,7 +25,7 @@
 
 <body>
     <!-- 네비게이션 -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="nav_container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light " id="nav_container">
         <div class="logo">
             <a class="navbar-brand" href="{% url 'home' %}">
                 <img src="/static/image/logo.png">
