--- a/project_festa/templates/base_copyright_version.html
+++ b/project_festa/templates/base_copyright_version.html
@@ -30,7 +30,7 @@
 <body>
 
     <!-- navbar시작 -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="logo">
             <a class="navbar-brand" href="{% url 'home' %}">
                 <img src="/static/image/logo.png">
