--- a/app_festa/templates/festa_home/confirm_login.html
+++ b/app_festa/templates/festa_home/confirm_login.html
@@ -9,6 +9,7 @@
             <p>인증번호를 입력해주세요</p>
             <input class="btn " type="submit" value="확인">
             <p>등록번호 <input type="text" name="register_num"></p>
+            {{fail}}
         </form>
     </div>
 </div>
