--- a/project_festa/templates/base.html
+++ b/project_festa/templates/base.html
@@ -24,30 +24,31 @@
 </head>
 
 <body>
-    <!-- 네비게이션 -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light " id="nav_container">
-        <div class="logo">
-            <a class="navbar-brand" href="{% url 'home' %}">
-                <img src="/static/image/logo.png">
-            </a>
-        </div>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'confirm_login' %}">등록 확인</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'new' %}">페스타 등록하기</a>
-                </li>
-            </ul>
-
-        </div>
-    </nav>
+    <!-- navbar시작 -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="nav_container">
+            <div id="nav_div">
+                <div class="logo">
+                        <form action="{% url 'home' %}" method="GET">
+                                <div><input id="bt_logo" type="image" src="/static/image/logo.png"></div>
+                            </form>
+                </div>
+    
+                <div id="nav_bt">
+                    <div id="bt_gotit">
+                        <form action="{% url 'confirm_login' %}" method="GET">
+                                <span><input class="left_bt" type="submit" value="등록확인"></span>
+                        </form>
+                    </div>
+                    <div id="bt_enroll">
+                        <form action="{% url 'new' %}" method="GET">
+                            <span><input class="left_bt" type="submit" value="페스타 등록"></span>
+                        </form>
+                    </div>
+    
+                </div>
+            </div>
+        </nav>
+        <!-- navbar 끝 -->
 
     <!-- 페이지 왼쪽에 위치한 공연정보 및 이미지, 메뉴 등 -->
     <div id="contents_container">
@@ -146,26 +147,66 @@
 
 <style>
     
-    #navbarSupportedContent a {
-        
-        border: 1px solid #6357ff;
-        background-color: #6357ff;
-        color: white;
-        margin-right: 20px;
-        text-align: right;
+    /*네비게이션바*/
+    #nav_div{
+        display: flex;
+        width: 100%;
+        height: 100%;
     }
-    .logo img{
-        width: 60px;
-        height: auto;
-        margin-left: 120px;
-    }
-    nav {
-        height: 45px;
-        -webkit-box-shadow: 0 8px 6px -6px  rgba(0, 0, 0, 0.2);
-        -moz-box-shadow: 0 8px 6px -6px  rgba(0, 0, 0, 0.2);
-        box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.2);
 
+    .navbar{
+        padding-top: 0px;
+        padding-bottom: 0px;
     }
+
+    #bt_gotit{
+        margin-right: 10px;
+    }
+    #bt_enroll{
+        margin-right: 10%;
+    }
+    .logo{
+        width: 20%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .logo form div{
+        width: 100%;
+        height: 100%;
+    }
+
+    #bt_logo{
+        width: 60px;
+        height: 100%;
+    }
+
+    #nav_bt{
+        width: 80%;
+        display: flex;
+        justify-content: flex-end;
+        align-self: center;
+    }
+
+    .logo form input{
+        width: 64px;
+        height: 32px;
+    }
+
+    .left_bt{
+        text-align: center;
+        background: #f4f3ff;
+    }
+    
+
+    nav {
+        height: 48.75px;
+        -webkit-box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.2);
+        -moz-box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.2);
+        box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.2);
+    }
+
+    /*********************************/
     /************************ center contents ***************/
 
     /* nav와 footer 사이의 컨텐츠가 들어갈 컨테이너 */
