audience list modify

--- a/app_festaNow/templates/festa_now/audience/audience_main.html
+++ b/app_festaNow/templates/festa_now/audience/audience_main.html
@@ -19,7 +19,7 @@
                     <td>시간</td>
                 </tr>
                 <!-- 공지등록 -->
-                {% for audience in festa.all %}
+                {% for audience in audiences.all %}
                 <tr class="notice_board">
                     <td>공지사항</td>
                     <td class="title_td">
