공지사항 및 로그인 완료

--- a/app_festaNow/templates/festa_now/staff/login.html
+++ b/app_festaNow/templates/festa_now/staff/login.html
@@ -8,7 +8,7 @@
                 {% csrf_token %}
                 <div class="visible_edit_box">
                     <div class="reserve_span">
-                        <span>이 &nbsp; &nbsp; &nbsp; &nbsp; 름</span>
+                        <span>팀 &nbsp; &nbsp;&nbsp;번 &nbsp;호</span>
                     </div>
                     <div class="bt_wrapper">
                         <input id="name_editText" type="text" name="reservation_name" value="1234"></p>
@@ -16,7 +16,7 @@
                 </div>
                 <div class="visible_edit_box">
                     <div class="reserve_span">
-                            <span>예매 번호</span>
+                            <span>전화 번호</span>
                     </div>
                     <div class="bt_wrapper">
                             <input id="num_editText" type="text" name="reservation_num" placeholder="1234">
