comment: 삭제시 true/false

--- a/app_festaReady/templates/festa_ready/incorrect_accompany.html
+++ b/app_festaReady/templates/festa_ready/incorrect_accompany.html
@@ -1,2 +1,2 @@
-<h1>비밀번호가 틀렸습니당</h1>
-<a href="{% url 'list_accompany' festa.id %}">목록으로 돌아가기</a><br>
+<h1>비번틀림</h1>
+<a href="{% url 'list_accompany' festa.id %}" class="btn btn-primary">뒤로가기</a>
