--- a/app_festaReady/templates/festa_ready/list_accompany.html
+++ b/app_festaReady/templates/festa_ready/list_accompany.html
@@ -13,6 +13,12 @@
             </form>
         </div>
 
+        <!--검색기능-->
+        <form action="" method="get">
+            <input type="text" name="search" value="{{ search }}">
+            <input type="submit" value="검색">
+            </form>
+
         <div id="table_div">
             <table>
                 <tr>
