--- a/app_festaReady/templates/festa_ready/list_accompany.html
+++ b/app_festaReady/templates/festa_ready/list_accompany.html
@@ -12,7 +12,10 @@
                 <input id="write_bt_text" type="submit" value="글쓰기">
             </form>
         </div>
-
+        <form action="" method="get">
+            <input type="text" name="search" value="{{ search }}">
+            <input type="submit" value="검색">
+        </form>
         <div id="table_div">
             <table>
                 <tr>
