--- a/app_festaNow/templates/festa_now/staff/login.html
+++ b/app_festaNow/templates/festa_now/staff/login.html
@@ -2,11 +2,10 @@
  {% block content %}
  
  <div id="login_container">
-        <div id="explain_text_box">인증번호를 입력해주세요</div>
+        <div id="explain_text_box">인증번호를 입력해주세요</div>{{fail}}
         <div id="booked_name_and_num">
                 <form id="edit_box_form" action="{% url 'staff_main' festa.id %}" method="POST">
                 {% csrf_token %}
-                {{fail}}
                 <div class="visible_edit_box">
                     <div class="reserve_span">
                         <span>팀 &nbsp; &nbsp;&nbsp;번 &nbsp;호</span>
