--- a/app_festaNow/templates/festa_now/staff/team.html
+++ b/app_festaNow/templates/festa_now/staff/team.html
@@ -38,8 +38,8 @@
                             <a href="{% url 'detail_team' festa.id team.id %}"> <span>{{team.title2}}</span></a>
                         </td>
                     <td>{{team.writer2}}</td>
-                    <td>{{team.pub_date|date:"Y/m/d"}}</td>
-                    <td>{{team.pub_date|time:"H:i"}}</td>
+                    <td>{{team.pub_date2|date:"Y/m/d"}}</td>
+                    <td>{{team.pub_date2|time:"H:i"}}</td>
                 </tr>
                 {% endfor %}
             </table>
