front back merge

--- a/project_festa/templates/base_copyright_version.html
+++ b/project_festa/templates/base_copyright_version.html
@@ -130,7 +130,10 @@
 
     .left_bt{
         text-align: center;
-        background: #f4f3ff;
+        background: #6357ff;
+        color: #ffffff;
+        border: none;
+        padding: 4px 10px;
     }
     
 
