--- a/project_festa/templates/base.html
+++ b/project_festa/templates/base.html
@@ -195,7 +195,10 @@
 
     .left_bt{
         text-align: center;
-        background: #f4f3ff;
+        background: #6357ff;
+        color: #ffffff;
+        border: none;
+        padding: 4px 10px;
     }
     
 
