--- a/project_festa/templates/base.html
+++ b/project_festa/templates/base.html
@@ -72,7 +72,7 @@
                     </div>
                     <div id="now_staff_menu_wrapper">
                         <div>
-                            <a id="notice_menu" href="{% url 'staff_main' festa.id %}">공지사항</a>
+                            <a id="notice_menu" href="{% url 'staff_main2' festa.id %}">공지사항</a>
                         </div>
                         <div>
                             <a id="teamBoard_menu" href="{% url 'now_team' festa.id %}">팀별 게시판</a>
