DateTimeField 포맷 수정 & 한국시간

--- a/app_festaReady/templates/festa_ready/detail_accompany.html
+++ b/app_festaReady/templates/festa_ready/detail_accompany.html
@@ -3,6 +3,7 @@
 
 <h2><동행찾기 상세보기 페이지></h2>
 <p> 제목: {{accompany.title}}</p>
+<p>{{ accompany.created_at|date:"o년 m월 j일 h:i"}}</p>
 <p> 지역: {{accompany.area}}</p>
 <p> 작성자: {{accompany.writer}}</p>
 <p> 내용: {{accompany.description}}</p>
