festa_now: DateTimeField 포맷수정 & 한국시간

--- a/app_festaNow/templates/festa_now/audience/detail_now.html
+++ b/app_festaNow/templates/festa_now/audience/detail_now.html
@@ -36,7 +36,7 @@
         <p>
             <h2>[Title] : {{now.title}}</h2>
             <p>[Writer] : {{now.writer}}</p>
-            <p>[Date of Issue] : {{now.pub_date}}</p>
+            <p>[Date of Issue] : {{now.pub_date|date:"o년 m월 j일 h:i"}}</p>
             <p>[Post Type] : {{now.post_type}}</p>
              
             <p>
