--- a/app_festaNow/templates/festa_now/audience/lost_found/detail_lost_found.html
+++ b/app_festaNow/templates/festa_now/audience/lost_found/detail_lost_found.html
@@ -39,7 +39,7 @@
             <h2>[Title] : {{lost_found.title}}</h2>
             <p>[Writer] : {{lost_found.writer}}</p>
             <p>[Post type] : {{lost_found.post_type}}</p>
-            <p>[Date of Issue] : {{lost_found.pub_date}}</p>
+            <p>[Date of Issue] : {{lost_found.pub_date|date:"o년 m월 j일 h:i"}}</p>
             <p>
                 [Body]
                 <br>
