--- a/app_festaNow/templates/festa_now/staff/detail_team.html
+++ b/app_festaNow/templates/festa_now/staff/detail_team.html
@@ -37,7 +37,7 @@
         <p>
             <h2>[Title] : {{team.title2}}</h2>
             <p>[Writer] : {{team.writer2}}</p>
-            <p>[Date of Issue] : {{team.pub_date}}</p>
+            <p>[Date of Issue] : {{team.pub_date|date:"o년 m월 j일 h:i"}}</p>
             <p>[POST_TYPE] : {{team.post_type}}</p>
             <p>
                 [Body]
