--- a/app_festaNow/templates/festa_now/staff/notice/detail_staff.html
+++ b/app_festaNow/templates/festa_now/staff/notice/detail_staff.html
@@ -36,7 +36,7 @@
         <p>
             <h2>[Title] : {{staff.title}}</h2>
             <p>[Writer] : {{staff.writer}}</p>
-            <p>[Date of Issue] : {{staff.pub_date}}</p>
+            <p>[Date of Issue] : {{staff.pub_date|date:"o년 m월 j일 h:i"}}</p>
             <p>
                 [Body]
                 <br>
