--- a/app_festaNow/templates/festa_now/staff/home/detail_home.html
+++ b/app_festaNow/templates/festa_now/staff/home/detail_home.html
@@ -39,7 +39,7 @@
             <h2>[Title] : {{home.title}}</h2>
             <p>[Writer] : {{home.writer}}</p>
             <p>[Region] : {{home.region}}</p>
-            <p>[Date of Issue] : {{home.pub_date}}</p>
+            <p>[Date of Issue] : {{home.pub_date|date:"o년 m월 j일 h:i"}}</p>
             <p>
                 [Body]
                 <br>
