--- a/app_festaNow/templates/festa_now/staff/team.html
+++ b/app_festaNow/templates/festa_now/staff/team.html
@@ -2,13 +2,18 @@
 {% block content %}
 
 <div id="team_container">
-    <div id="subtitle_text_wrapper">
-        팀별 게시판
+    <div class="title_search">
+        <div id="subtitle_text_wrapper">
+            팀별 게시판
+        </div>
+        <div id="form_wrapper">
+            <form action="" method="GET">
+                <input id="editText" type="text" name="search" value="{{search}}">
+                <input id="searchBt" type="submit" value="&#xf002" class="fa-lg">
+            </form>
+        </div>
     </div>
-    <form action="" method="get">
-            <input type="text" name="search" value="{{ search }}">
-            <input type="submit" value="검색">
-    </form>
+
     <div id="table_bt_div">
         <div id="bt_write_div">
             <form action="{% url 'new_team' festa.id %}" method="GET">
@@ -35,8 +40,8 @@
                 <tr class="content_board">
                     <td>{{team.post_type}}</td>
                     <td class="title_td">
-                            <a href="{% url 'detail_team' festa.id team.id %}"> <span>{{team.title2}}</span></a>
-                        </td>
+                        <a href="{% url 'detail_team' festa.id team.id %}"> <span>{{team.title2}}</span></a>
+                    </td>
                     <td>{{team.writer2}}</td>
                     <td>{{team.pub_date2|date:"Y/m/d"}}</td>
                     <td>{{team.pub_date2|time:"H:i"}}</td>
@@ -79,6 +84,7 @@
 
     /* 팀별 게시판 타이틀 */
     #subtitle_text_wrapper {
+        width: 50%;
         font-size: 20px;
         font-weight: bold;
     }
@@ -200,5 +206,47 @@
         width: 100%;
         text-align: center;
     }
+
+    /* 검색 버튼 */
+    #form_wrapper {
+        width: 100%;
+        height: 100%;
+        align-self: flex-end;
+        display: flex;
+        /* padding-right: 10%; */
+        padding-left: 30%;
+    }
+
+    #form_wrapper form {
+        width: 100%;
+        align-self: center;
+        display: block;
+        border: 1px solid #EAEAEA;
+    }
+
+    #editText {
+        width: 90%;
+        text-overflow: ellipsis;
+    }
+
+    #searchBt {
+        width: 10%;
+        height: 26px;
+        padding: 1px;
+        background: #ff5543;
+        font-family: FontAwesome;
+        color: #ffffff;
+    }
+
+    #form_wrapper form input {
+        float: left;
+        border: 0px;
+    }
+
+    .title_search {
+        width: 100%;
+        display: inline-flex;
+    }
+</style>
 </style>
 {% endblock %}
