--- a/app_festaReady/templates/festa_ready/list_accompany.html
+++ b/app_festaReady/templates/festa_ready/list_accompany.html
@@ -1,9 +1,17 @@
-{% extends 'base_copyright_version.html' %}
+{% extends 'base.html' %}
 {% block content %}
 
 <div id="list_accompany_container">
-    <div id="subtitle_text_wrapper">
-        동행구하기
+    <div class="title_search">
+        <div id="subtitle_text_wrapper">
+            동행구하기
+        </div>
+        <div id="form_wrapper">
+            <form action="" method="GET">
+                <input id="editText" type="text" name="search" value="{{search}}">
+                <input id="searchBt" type="submit" value="&#xf002" class="fa-lg">
+            </form>
+        </div>
     </div>
     <div id="table_bt_div">
         <div id="bt_write_div">
@@ -12,12 +20,6 @@
                 <input id="write_bt_text" type="submit" value="글쓰기">
             </form>
         </div>
-
-        <!--검색기능-->
-        <form action="" method="get">
-            <input type="text" name="search" value="{{ search }}">
-            <input type="submit" value="검색">
-            </form>
 
         <div id="table_div">
             <table>
@@ -36,7 +38,8 @@
                 <tr class="notice_board">
                     <td>{{accompany.area}}</td>
                     <td class="title_td">
-                        <a href="{% url 'detail_accompany' festa.id accompany.id %}"> <span>{{accompany.title}}</span></a>
+                        <a href="{% url 'detail_accompany' festa.id accompany.id %}">
+                            <span>{{accompany.title}}</span></a>
                     </td>
                     <td>{{accompany.writer}}</td>
                     <td>{{accompany.pub_date|date:"Y/m/d"}}</td>
@@ -80,6 +83,7 @@
 
     /* 공지사항 타이틀 */
     #subtitle_text_wrapper {
+        width: 50%;
         font-size: 20px;
         font-weight: bold;
     }
@@ -179,6 +183,7 @@
         margin-right: auto;
     }
 
+
     #bt_write_div form {
         background: #eaeaea;
         text-align: center;
@@ -209,6 +214,47 @@
     #pagination {
         width: 100%;
         text-align: center;
+    }
+
+    /* 검색 버튼 */
+    #form_wrapper {
+        width: 100%;
+        height: 100%;
+        align-self: flex-end;
+        display: flex;
+        /* padding-right: 10%; */
+        padding-left: 30%;
+    }
+
+    #form_wrapper form {
+        width: 100%;
+        align-self: center;
+        display: block;
+        border: 1px solid #EAEAEA;
+    }
+
+    #editText {
+        width: 90%;
+        text-overflow: ellipsis;
+    }
+
+    #searchBt {
+        width: 10%;
+        height: 26px;
+        padding: 1px;
+        background: #ff5543;
+        font-family: FontAwesome;
+        color: #ffffff;
+    }
+
+    #form_wrapper form input {
+        float: left;
+        border: 0px;
+    }
+
+    .title_search {
+        width: 100%;
+        display: inline-flex;
     }
 </style>
 {% endblock %}
